[package]
name = "ra-multiplex"
version = "0.2.2"
description = "share one rust-analyzer server instance between multiple LSP clients to save resources"
repository = "https://github.com/pr2502/ra-multiplex"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
clap = { version = "4.3.0", features = ["derive", "env"] }
directories = "4.0.1"
pin-project-lite = "0.2.13"
serde = { version = "1.0.186" }
serde_derive = { version = "1.0.186" }
serde_json = "1.0.78"
time = "0.3.30"
tokio = { version = "1.15.0", features = ["fs", "io-std", "io-util", "macros", "net", "parking_lot", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.5.8"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
